--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -7,6 +7,8 @@ $on-accent: #fff
 
 header
   background-image: url('./assets/background_header.png')
+  background-position: center
+  background-size: 105%
 
 header>*
   color: #fff
