--- a/sass/_typography.sass
+++ b/sass/_typography.sass
@@ -1,4 +1,12 @@
+//Font family
+*
+  font-family: 'Work Sans', sans-serif
+
+
+//Sizing
 header>h1
+  line-height: 1.8em
+  letter-spacing: 0.1em
   font-size: 3em
 
 header>h2
