--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,7 +1,7 @@
 //HEADER
 // Not working for some purposes? I have to mannually copy paste the colors.
 // @use 'colors'
-
+$background: #0D3B66
 $accent: #DB2B39
 $on-accent: #fff
 
@@ -10,8 +10,18 @@ header
   background-position: center
   background-size: 105%
 
+header::before
+  content: ''
+  position: absolute
+  height: 100%
+  width: 100%
+  background: $background
+  opacity: 0.5
+  z-index: 1
+
 header>*
   color: #fff
+  z-index: 2
 
 // BUTTON CTA
 header>input
@@ -22,13 +32,16 @@ header>input
   text-transform: uppercase
   font-size: 1.5em
   border-radius: 20px
+  border: none
+  cursor: pointer
 
 // Name Aloys in H1
 header>h1>span
   color: $accent
-  text-transform: uppercase
-  font-weight: 700
+  text-transform: capitalize
+  font-weight: bold
 
 // Subtitle
 header>h2
-  opacity: 70%
+  opacity: 65%
+  margin-top: 0
