--- a/sass/_typography.sass
+++ b/sass/_typography.sass
@@ -6,11 +6,13 @@
 //Sizing
 header>h1
   line-height: 1.8em
-  letter-spacing: 0.1em
+  letter-spacing: 0.15em
   font-size: 3em
 
 header>h2
   font-size: 1.5em
+  letter-spacing: 0.15em
+  // font-variant: small-caps
 
 header
   text-align: center
