--- a/style.css
+++ b/style.css
@@ -21,12 +21,13 @@ section {
 
 header > h1 {
   line-height: 1.8em;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.15em;
   font-size: 3em;
 }
 
 header > h2 {
   font-size: 1.5em;
+  letter-spacing: 0.15em;
 }
 
 header {
@@ -39,8 +40,19 @@ header {
   background-size: 105%;
 }
 
+header::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: #0D3B66;
+  opacity: 0.5;
+  z-index: 1;
+}
+
 header > * {
   color: #fff;
+  z-index: 2;
 }
 
 header > input {
@@ -51,16 +63,19 @@ header > input {
   text-transform: uppercase;
   font-size: 1.5em;
   border-radius: 20px;
+  border: none;
+  cursor: pointer;
 }
 
 header > h1 > span {
   color: #DB2B39;
-  text-transform: uppercase;
-  font-weight: 700;
+  text-transform: capitalize;
+  font-weight: bold;
 }
 
 header > h2 {
-  opacity: 70%;
+  opacity: 65%;
+  margin-top: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
