--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ html, body {
   padding: 0;
 }
 
+/*HEADER*/
+
 header {
   height: 100vh;
   display: flex;
@@ -21,13 +23,13 @@ section {
 
 header > h1 {
   line-height: 1.8em;
-  letter-spacing: 0.15em;
+  letter-spacing: 0.10em;
   font-size: 3em;
 }
 
 header > h2 {
   font-size: 1.5em;
-  letter-spacing: 0.15em;
+  letter-spacing: 0.14em;
 }
 
 header {
@@ -40,13 +42,15 @@ header {
   background-size: 105%;
 }
 
+/*Background filter*/
+
 header::before {
   content: "";
   position: absolute;
   height: 100%;
   width: 100%;
   background: #0D3B66;
-  opacity: 0.5;
+  opacity: 0.45;
   z-index: 1;
 }
 
@@ -57,16 +61,18 @@ header > * {
 
 header > input {
   margin-top: 2em;
-  padding: 1em 2em;
+  padding: 1.1em 2.4em;
   background-color: #DB2B39;
   color: #fff;
   text-transform: uppercase;
+  font-weight: 100;
   font-size: 1.5em;
   border-radius: 20px;
   border: none;
   cursor: pointer;
 }
 
+/*Red Aloys*/
 header > h1 > span {
   color: #DB2B39;
   text-transform: capitalize;
@@ -79,3 +85,6 @@ header > h2 {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+
+/*ABOUT ME*/
