--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ img{
 
 .skills{
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, 20%);
   grid-template-rows: repeat(11, 1fr);
   grid-template-areas: 
     "title skill skill skill skill"
@@ -171,6 +171,7 @@ img{
   grid-template-columns: 1fr;
   grid-template-rows: repeat(10, 1fr);
   justify-items: end;
+  justify-content: center;
   align-items: center;
 }
 
@@ -178,22 +179,38 @@ img{
   margin: 0;
 }
 
-/*.skills__bars{
+.skills__bars{
   grid-area: skill;
-  display: flex;
-  flex-flow: row wrap;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(10, 1fr);
   align-items: center;
+  padding: 0 1em;
 }
 
 
 .skills__bar { 
-  flex: 1 0 100%;
   background-color: #0D3B66;
   border-radius: 0.75em;
   height: 1.5em;
-}*/
+}
 
-h4>div>div>div{
+.skills__barsPercentages{
+  grid-area: skill;
+  display: grid;
+  grid-template-columns: repeat(4,25%);
+  grid-template-rows: 1fr;
+  justify-items:end;
+}
+
+.skills__barsPercentage{
+  position: relative;
+  z-index: 9;
+  height: 100%;
+  border-right: 1px dashed white;
+}
+
+/*h4>div>div>div{
   margin-top: 0.375em;
   margin-left: 0.4em;
   z-index: 1;
@@ -203,27 +220,23 @@ h4>div>div>div{
   width: 0%;
 
   /*stay as per end of the animation*/
-  animation-fill-mode: forwards;
-}
+ /* animation-fill-mode: forwards;
+}*/
 
-
-.legends{
-  position: relative;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-around;
-  padding-left: 30%;
-  width: 60%;
+.skills__legends{
+  grid-area: legend;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(4, 25%);
+  justify-items: center;
+  align-items: start;
   font-size: 0.75em;
 }
 
-.legends > *:nth-child(even){
-  position: relative;
-  margin-top: 0em;
+.skills__legend{
+  margin-top: 0;
 }
 
-.legends p{
-}
 
 
 /*Not sure how to do this. These are the bars for the legends on the skills bars
@@ -235,11 +248,14 @@ h4>div>div>div{
   background-color: black;
   width: 2px;
 }*/
-
-
-.legends > *:nth-child(odd){
-  margin-top: 2em;
+/*
+.skills__legend:nth-child(even){
+  margin-top: 0em;
 }
+
+.skills__legend:nth-child(odd){
+  margin-top: 1em;*/
+
 
 /*Dev*/
 #about{
