--- a/style.css
+++ b/style.css
@@ -1,107 +1,110 @@
 /*VARIABLES*/
 
-:root{
-  --main-color: #0D3B66;
-  --accent-color: #DB2B39;
+:root {
+    --main-color: #0D3B66;
+    --accent-color: #DB2B39;
 }
 
 /*RESET*/
 
-html, body {
-  margin: 0;
-  padding: 0;
+html,
+body {
+    margin: 0;
+    padding: 0;
 }
 
 /*SCROLL SNAPPING*/
 
-html{
-  height: 100vh;
-  scroll-snap-type: y mandatory;
+html {
+    min-height: 100vh;
+    scroll-snap-type: y mandatory;
 }
 
-header,section,footer{
-  scroll-snap-align: start;
+header,
+section,
+footer {
+    scroll-snap-align: start;
 }
 
 /*HEADER*/
 
 header {
-  height: 100vh;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
+    height: 100vh;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
 }
 
 section {
-  height: 100vh;
+    min-height: 100vh;
 }
 
 * {
-  font-family: "Work Sans", sans-serif;
+    font-family: "Work Sans", sans-serif;
 }
 
-header > h1 {
-  line-height: 1.8em;
-  letter-spacing: 0.10em;
-  font-size: 3em;
+header>h1 {
+    line-height: 1.8em;
+    letter-spacing: 0.10em;
+    font-size: 3em;
 }
 
-header > h2 {
-  font-size: 1.5em;
-  letter-spacing: 0.14em;
-}
-
-header {
-  text-align: center;
+header>h2 {
+    font-size: 1.5em;
+    letter-spacing: 0.14em;
 }
 
 header {
-  background-image: url("./assets/background_header.png");
-  background-position: center;
-  background-size: 105%;
+    text-align: center;
+}
+
+header {
+    background-image: url("./assets/background_header.png");
+    background-position: center;
+    background-size: 105%;
 }
 
 /*Background filter*/
 
 header::before {
-  content: "";
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background: #0D3B66;
-  opacity: 0.45;
-  z-index: 1;
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: #0D3B66;
+    opacity: 0.45;
+    z-index: 1;
 }
 
-header > * {
-  color: #fff;
-  z-index: 2;
+header>* {
+    color: #fff;
+    z-index: 2;
 }
 
-header > input {
-  margin-top: 2em;
-  padding: 1.1em 2.4em;
-  background-color: #DB2B39;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: 100;
-  font-size: 1.5em;
-  border-radius: 20px;
-  border: none;
-  cursor: pointer;
+header>input {
+    margin-top: 2em;
+    padding: 1.1em 2.4em;
+    background-color: #DB2B39;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 100;
+    font-size: 1.5em;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
 }
 
 /*Red Aloys*/
-header > h1 > span {
-  color: #DB2B39;
-  text-transform: capitalize;
-  font-weight: bold;
+header>h1>span {
+    color: #DB2B39;
+    text-transform: capitalize;
+    font-weight: bold;
 }
 
-header > h2 {
-  opacity: 65%;
-  margin-top: 0;
+header>h2 {
+    opacity: 65%;
+    margin-top: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
@@ -109,156 +112,187 @@ header > h2 {
 
 /*ABOUT ME*/
 
-#about{
-  display: flex;
-  flex-direction: row;
+#about {
+    display: flex;
+    flex-direction: row;
 }
 
-.about__subsection{
-  flex: 0 1 40%;
+.about__subsection {
+    flex: 0 1 40%;
 }
 
-.about__subsection:first-child{
-  display: flex;
+.about__subsection:first-child {
+    /*  display: flex;
   flex-flow: column wrap;
-  align-items: center;
+  align-items: center;*/
 }
 
-.about__subsection:first-child > * {
-  padding: 0 0 0 20%;
+.about__subsection:first-child>* {
+    padding: 0 0 0 20%;
 }
 
-#about h3{
-  font-size: 2.5em;
-  text-transform: uppercase;
-  padding-top: 0.5em;
-  letter-spacing: 0.05em;
+#about h3 {
+    font-size: 2.5em;
+    text-transform: uppercase;
+    padding-top: 0.5em;
+    letter-spacing: 0.05em;
 }
 
-.about__subsection:last-child{
-  margin-top: 4%;
-  flex-grow: 1;
+.about__subsection:last-child {
+    margin-top: 4%;
+    flex-grow: 1;
 }
 
-h4{
-  margin: 1em;
+h4 {
+    margin: 1em;
 }
 
-img{
-  height: 30%;
-  width: 60%;
+img {
+    height: 30%;
+    width: 60%;
 }
 
-#about p{
-  text-align: justify;
-  line-height: 2em;
+#about p {
+    text-align: justify;
+    line-height: 2em;
 
 }
 
-#about h3{
-  color: var(--accent-color);
+#about h3 {
+    color: var(--accent-color);
 }
 
-#about h4{
-  /*line-height: 2.5em;*/
-  color: var(--accent-color);
+#about h4 {
+    /*line-height: 2.5em;*/
+    color: var(--accent-color);
 }
 
-.skills{
-  display: grid;
-  grid-template-columns: repeat(5, 20%);
-  grid-template-rows: repeat(11, 1fr);
-  grid-template-areas: 
-    "title skill skill skill skill"
-    "title skill skill skill skill"
-    "title skill skill skill skill"
-    "title skill skill skill skill"
-    "title skill skill skill skill"
-    "title skill skill skill skill"
-    "title skill skill skill skill"
-    "title skill skill skill skill"
-    "title skill skill skill skill"
-    "title skill skill skill skill"
-    ". legend legend legend legend"
+.skills {
+    display: grid;
+    grid-template-columns: repeat(5, 20%);
+    grid-template-rows: repeat(11, 1fr);
+    grid-template-areas:
+        "title skill skill skill skill"
+        "title skill skill skill skill"
+        "title skill skill skill skill"
+        "title skill skill skill skill"
+        "title skill skill skill skill"
+        "title skill skill skill skill"
+        "title skill skill skill skill"
+        "title skill skill skill skill"
+        "title skill skill skill skill"
+        "title skill skill skill skill"
+        ". legend legend legend legend"
 }
 
-.skills__titles{
-  grid-area: title;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(10, 1fr);
-  justify-items: end;
-  justify-content: center;
-  align-items: center;
+.skills__titles {
+    grid-area: title;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(10, 1fr);
+    justify-items: end;
+    justify-content: center;
+    align-items: center;
 }
 
-.skills__title{
-  margin: 0;
+.skills__title {
+    margin: 0;
 }
 
-.skills__bars{
-  grid-area: skill;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(10, 1fr);
-  align-items: center;
-  padding: 0 1em;
-}
-
-
-.skills__bar { 
-  background-color: #0D3B66;
-  border-radius: 1em;
-  height: 2em;
-}
-
-.skills__innerBar{
-  margin-top: 0.375em;
-  margin-left: 0.4em;
-  z-index: 1;
-  background: var(--accent-color);
-  border-radius: 0.625em;
-  height: 1.25em;
-  width: 0%;
-
-  /*stay as per end of the animation*/
-  animation-fill-mode: forwards;
-}
-
-.skills__barsPercentages{
-  grid-area: skill;
-  display: grid;
-  grid-template-columns: repeat(4,25%);
-  grid-template-rows: 1fr;
-  justify-items:end;
-}
-
-.skills__barsPercentage{
-  position: relative;
-  z-index: 9;
-  height: 100%;
-  border-right: 1px dashed white;
-}
-
-.skills__legends{
-  grid-area: legend;
-  display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: repeat(4, 25%);
-  justify-items: center;
-  align-items: start;
-  font-size: 0.75em;
-}
-
-.skills__legend{
-  margin-top: 0;
+.skills__bars {
+    grid-area: skill;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(10, 1fr);
+    align-items: center;
+    padding: 0 1em;
 }
 
 
-/*Dev
-#about{
-  /*background: red;*/
+.skills__bar {
+    background-color: #0D3B66;
+    border-radius: 1em;
+    height: 2em;
+}
+
+.skills__innerBar {
+    margin-top: 0.375em;
+    margin-left: 0.4em;
+    z-index: 1;
+    background: var(--accent-color);
+    border-radius: 0.625em;
+    height: 1.25em;
+    width: 0%;
+
+    /*stay as per end of the animation*/
+    animation-fill-mode: forwards;
+}
+
+.skills__barsPercentages {
+    grid-area: skill;
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: 1fr;
+    justify-items: end;
+}
+
+.skills__barsPercentage {
+    position: relative;
+    z-index: 9;
+    height: 100%;
+    border-right: 1px dashed white;
+}
+
+.skills__legends {
+    grid-area: legend;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(4, 25%);
+    justify-items: center;
+    align-items: start;
+    font-size: 0.75em;
+}
+
+.skills__legend {
+    margin-top: 0;
 }
 
 /*//FEATURES SECTION*/
 
+#feature {
+    background: var(--main-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.features {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 0 7%;
+    justify-content: space-between;
+}
+
+.feature{
+  flex: 0 0 25%;
+  color: white;
+  margin: 1%;
+}
+
+.feature__title{
+  flex-grow: 1;
+  font-size: 3.5em;
+  letter-spacing: 0.05em;
+  text-align: center;
+}
+
+.feature__body{
+  text-align: justify;
+  line-height: 1.8em;
+  opacity: 0.7;
+}
+
+.feature__icon{
+  margin: 0 15%;
+  /*height: 10em;*/
+}
