--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h4{
   margin: 1em;
 }
 
-img{
+.about__subsection>img{
   height: 30%;
   width: 60%;
 }
@@ -258,7 +258,56 @@ img{
 /*Dev
 #about{
   /*background: red;*/
-}
+/*}*/
 
 /*//FEATURES SECTION*/
 
+/*PORTFOLIO WORK SECTION*/
+
+.works{
+  display: flex;
+  flex-flow: row nowrap;
+  margin: 2em 5% 5em;
+  justify-content: space-between;
+  max-width: 100vw;
+}
+
+.works__project{
+  width: 0;
+  flex: 1 1 0;
+  height: 80vh;
+  margin: 0 0.5em;
+  overflow: hidden;
+}
+
+
+/*Trying to create a blue filter for when hovering above the project*/
+/*not working*/
+/*.works__project::before{
+  content: '';
+  position: relative;
+  z-index: 2;
+  height: 100%;
+  width: 100%;
+  background-color: var(--main-color);
+}
+*/
+.works__project > img{
+  object-fit: cover;
+}
+
+.works__project:hover{
+  opacity: 0.2;
+  transform: scale(1.1);
+  transition:  500ms ease-in-out;
+}
+
+
+#work h1{
+  margin: 2% 5.5%;
+  color: var(--accent-color);
+  font-size: 2.5em;
+  text-transform: uppercase;
+  padding-top: 0.5em;
+  letter-spacing: 0.05em;
+}
