--- a/style.css
+++ b/style.css
@@ -270,6 +270,7 @@ h4{
   margin: 2em 5% 5em;
   justify-content: space-between;
   max-width: 100vw;
+    transition:  500ms ease-in-out;
 }
 
 .works__project{
@@ -278,6 +279,7 @@ h4{
   height: 80vh;
   margin: 0 0.5em;
   overflow: hidden;
+  cursor: pointer;
 }
 
 
@@ -296,9 +298,9 @@ h4{
   object-fit: cover;
 }
 
-.works__project:hover{
+.works__project>img:hover{
   opacity: 0.2;
-  transform: scale(1.1);
+  transform: scale(1.05);
   transition:  500ms ease-in-out;
 }
 
@@ -311,3 +313,82 @@ h4{
   padding-top: 0.5em;
   letter-spacing: 0.05em;
 }
+
+/*POP UP MODAL*/
+.bgGreyFilter{
+  position: absolute;
+  z-index: 3;
+  background-color: black;
+  opacity: 0.7;
+  width: 100%;
+  height: 100%;
+}
+
+.hidden{
+  display: none;
+  transition:  500ms ease-in-out;
+}
+
+.featuredProject{
+  transition:  500ms ease-in-out;
+  flex-basis: 60%;
+  flex-grow: 3;
+  /*position: relative;*/
+  z-index: 4;
+  background: white;
+  border: 2px solid grey;
+}
+
+.featuredProject>img{
+  opacity: 1;
+  transform: scale(1.0);
+  transition:  500ms ease-in-out;
+  flex: 3 1 0;
+}
+
+/*@media only screen and (max-width: 800px){
+  .featuredProject{
+  display: flex;
+  background: red;
+  flex-flow: column nowrap!important;
+  flex: 1 3 80%;
+}
+}
+*/
+.featuredProject>img:hover{
+  opacity:1;
+  transform: scale(1);
+}
+
+.featuredProject{
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.works__description{
+  position: relative;
+  padding: 1em;
+  overflow-y: scroll;
+}
+
+.featuredProject button{
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  height: 40px;
+  width: 45px;
+  margin: 0.5em;
+  background: white;
+  color: var(--accent-color);
+  border: none;
+  font-size: 2em;
+  cursor: pointer;
+}
+
+
+.works .works__project.featureProject:hover{
+  /*opacity: 0.2;*/
+  /*transform: scale(1.1);*/
+  /*transition:  500ms ease-in-out;*/
+}
+
