--- a/style.css
+++ b/style.css
@@ -348,3 +348,72 @@ h4 {
   padding-top: 0.5em;
   letter-spacing: 0.05em;
 }
+
+
+/* //CONTACT SECTION// */
+#contact{
+  background-color: var(--main-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#contact form{
+  flex: 1 1 0;
+  position: relative;
+  margin: 0 2em;
+  background-color: #1F4D77;
+  color: white;
+  padding: 1.8em 2.5em;
+  display: flex;
+  flex-flow: column;
+  max-width: 800px;
+}
+
+form>h3{
+    font-size: 2.5em;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    margin: 0;
+    padding-bottom: 0.3em;
+}
+
+form>h4{
+  padding: 0;
+  margin: 0;
+  opacity: 0.7;
+  padding-bottom: 0.8em;
+  font-size: 1.1em;
+}
+
+form>label{
+  font-size: 0.7em;
+  opacity: 1;
+  text-transform: uppercase;
+  visibility: hidden;
+}
+
+form button[type='submit']{
+  max-width: 25%;
+  display: block;
+  margin: auto;
+  font-size: 1.2em;
+  padding:1em 2em;
+  background-color: var(--accent-color);
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+form>input, form>textarea{
+  padding: 1em 1em;
+  margin: 0.5em 0;
+  font-size: 0.8em;
+}
+
+form>textarea{
+  margin-bottom: 2em;
+}
+
+
+
