--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,10 @@ section+section{
   margin-top: 10vh;
 }
 
+header{
+  position: relative;
+}
+
 .header__wrapper{
   max-width: 1200px;
   width: 80%;
@@ -112,7 +116,7 @@ section+section{
 .cta__btn {
     max-width: 50%;
     display: block;
-    padding: 1.1em 2.4em;
+    padding: 1.1em 3em;
     background-color: #DB2B39;
     color: #fff;
     text-transform: uppercase;
@@ -143,6 +147,16 @@ section+section{
 .cta__btn--secondary:hover{
   background-color: rgba(255,255,255,0.2);
   border: 1px white solid;
+}
+
+.scrollDown__wrapper{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 1.2em;
+  left: 45%;
+  opacity: 50%;
 }
 
 /*/////__ABOUT ME__/////*/
@@ -485,6 +499,7 @@ i{
 .project__description{
   width: 80%;
   margin: 0 2em;
+  padding: 0 0 1em 0;
 }
 
 .project__title{
@@ -517,6 +532,46 @@ i{
   font-size: 2em;
   cursor: pointer;
 }
+
+q{
+  font-size: 1rem;
+  margin-left: 1em;
+  color: var(--main-color);
+}
+
+.project__btnsLink{
+  display: flex;
+  padding: 1em 0;
+  margin: 0 auto;
+}
+
+.project__btnLink{
+  padding: .5em 1em;
+  background: var(--main-color);
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+      box-shadow: 0 5px 5px 0 rgba(0,0,0,0.4);
+}
+.project__btnLink--code{
+  padding: .5em 1em;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+  background: var(--accent-color);
+  margin-right:1em;
+      box-shadow: 0 5px 5px 0 rgba(0,0,0,0.4);
+}
+
+.project__btnsLink>*:hover{
+  transition: 300ms ease-in-out;
+  opacity: 0.8;
+transform: scale(1.02);
+}
+
+
 
 /*Feature Project when clicked on => link to JS*/
 .featuredProject{
@@ -655,6 +710,16 @@ footer{
 
 .footer__link{
   margin: 0 1em;
+      display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+
+.footer__links{
+    display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer__signature{
@@ -678,7 +743,7 @@ footer{
     max-width: 100px;
   }
 
-  .hidden-md{
+  .md-hidden{
     display: none !important;
   }
 }
@@ -698,7 +763,7 @@ footer{
 
   .header__title{
     font-size: 2.5rem;
-    margin-top: 2em;
+    margin-top: 1em;
   }
 
   .header__subtitle{
@@ -768,7 +833,7 @@ footer{
     flex:1 1 auto;
   }
 
-  .hidden-sm{
+  .sm-hidden{
     display: none !important;
   }
 
