--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,7 @@ header{
     letter-spacing: 0.14em;
     font-weight: 300;
     padding: 0 0 1em 0;
-    opacity: 65%;
+    opacity: .65;
     margin-top: 0;
 }
 
@@ -156,7 +156,7 @@ header{
   position: absolute;
   bottom: 1.2em;
   left: calc(50% - 2em);
-  opacity: 30%;
+  opacity: .3;
   transition: 300ms all ease-in-out;
 }
 
